--- a/public/oven.html
+++ b/public/oven.html
@@ -4,30 +4,64 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Oven Shift Performance</title>
+
   <link rel="stylesheet" href="/styles.css" />
+
   <style>
     .oven-wrap { max-width: 1200px; margin: 20px auto; padding: 0 12px; }
-    .oven-controls { display:flex; flex-wrap:wrap; gap:12px; align-items:end; }
-    .oven-controls label { font-weight:800; display:block; margin-bottom:6px; }
-    .oven-controls input { padding:10px; font-size:16px; }
-    .btn { padding:10px 14px; font-weight:900; cursor:pointer; }
+
+    /* Restore the original simple control layout */
+    .oven-controls {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 12px;
+      align-items: flex-end; /* natural alignment with label+input blocks */
+    }
+
+    .oven-controls label {
+      font-weight: 800;
+      display: block;
+      margin-bottom: 6px;
+    }
+
+    .oven-controls input,
+    .oven-controls select {
+      padding: 10px;
+      font-size: 16px;
+    }
+
+    /* Keep buttons consistent on this page */
+    .btn { padding: 10px 14px; font-weight: 900; cursor: pointer; }
+
     .row { display:flex; gap:10px; flex-wrap:wrap; }
+
     .card { background:#fff; border:1px solid #ddd; border-radius:10px; padding:12px 14px; min-width:220px; }
     .card h3 { margin:0 0 6px 0; }
     .muted { color:#666; }
+
     canvas { background:#fff; border:1px solid #ddd; border-radius:10px; width:100%; height:420px; }
+    #shiftBarChart { height: 320px; }
+
     .legend { display:flex; gap:14px; flex-wrap:wrap; margin-top:10px; }
     .legend .item { display:flex; align-items:center; gap:8px; font-weight:800; }
     .swatch { width:14px; height:14px; border-radius:3px; display:inline-block; }
     .error { color:#b00020; font-weight:900; margin-top:10px; }
+
+    /* Dark mode overrides for oven page (keeps it consistent) */
+    .theme-dark .oven-wrap .muted { color: var(--muted); }
+    .theme-dark .oven-wrap .card { background: var(--panel); border-color: var(--border); color: var(--text); }
+    .theme-dark .oven-wrap canvas { background: #0f1419; border-color: var(--border); }
   </style>
 </head>
+
 <body>
   <div id="topnav"></div>
 
   <div class="oven-wrap">
     <h1 style="margin-top:8px;">Oven Shift Performance</h1>
-    <div class="muted">Completed molds per hour where Plug Present = true (by MoldSize).</div>
+    <div class="muted">
+      Completed filled molds over time (by MoldSize). Use “Chart View” to switch visualizations.
+    </div>
 
     <div class="oven-controls" style="margin-top:14px;">
       <div>
@@ -40,23 +74,54 @@
         <input id="end" type="datetime-local" />
       </div>
 
-      <button class="btn" id="applyBtn">Apply</button>
-      <button class="btn" id="todayBtn">Today</button>
-      <button class="btn" id="shiftBtn">This Shift</button>
-      <button class="btn" id="last8Btn">Last 8 Hours</button>
-      <label style="display:flex; gap:8px; align-items:center; margin-left:8px;">
+      <button class="btn" id="applyBtn" type="button">Apply</button>
+      <button class="btn secondary" id="downloadCsvBtn" type="button">Download CSV</button>
+      <button class="btn" id="todayBtn" type="button">Today</button>
+      <button class="btn" id="shiftBtn" type="button">This Shift</button>
+      <button class="btn" id="last8Btn" type="button">Last 8 Hours</button>
+
+      <div>
+        <label for="chartView">Chart View</label>
+        <select id="chartView">
+          <option value="timeseries" selected>Time Series (5 min)</option>
+          <option value="shiftType">Shift Totals (1st/2nd/3rd)</option>
+          <option value="shiftInstance">Shift Instances (Day + Shift)</option>
+        </select>
+      </div>
+
+      <div>
+        <label for="shiftSizeFilter">Shift Chart Size</label>
+        <select id="shiftSizeFilter">
+          <option value="ALL" selected>All Sizes</option>
+          <option value="1">Size 1</option>
+          <option value="2">Size 2</option>
+          <option value="3">Size 3</option>
+          <option value="4">Size 4</option>
+        </select>
+      </div>
+
+      <label style="display:flex; gap:8px; align-items:center; margin-left:8px; font-weight:900;">
         <input id="live" type="checkbox" />
         Live (refresh 60s)
       </label>
     </div>
 
     <div class="row" style="margin-top:14px;" id="shiftCards"></div>
+    <div class="row" style="margin-top:14px;" id="kpiCards"></div>
 
-    <div style="margin-top:14px;">
+    <!-- TIME SERIES SECTION -->
+    <div id="timeseriesSection" style="margin-top:14px;">
       <canvas id="chart" width="1200" height="420"></canvas>
       <div class="legend" id="legend"></div>
-      <div class="error" id="error" style="display:none;"></div>
     </div>
+
+    <!-- SHIFT BAR SECTION -->
+    <div id="shiftBarsSection" style="margin-top:14px; display:none;">
+      <canvas id="shiftBarChart" width="1200" height="320"></canvas>
+      <div class="legend" id="shiftLegend"></div>
+    </div>
+
+    <div class="error" id="error" style="display:none;"></div>
   </div>
 
   <script src="/nav.js"></script>
