--- a/public/tv-maintenance.html
+++ b/public/tv-maintenance.html
@@ -21,12 +21,13 @@
   // Rotation list (add future maintenance pages here)
   const ROTATE_URLS = [
     "/oven",
-    "/molds"
+    "/molds",
+    "/embed/oven?chart=timeseries&range=prevShift&title=Oven — Prev Shift"
     // Future: "/maintenance-metrics", "/pm-compliance", etc.
   ];
 
   const ROTATE_EVERY_MS = 90 * 1000;     // 90 seconds per page
-  const RETURN_COOLDOWN_MS = 20 * 1000;  // wait 20s after call clears
+  const RETURN_COOLDOWN_MS = 15 * 1000;  // wait 15s after call clears
   // -------------------------------------------
 
   const screen = document.getElementById("screen");
