Updated rotating quality charts

--- a/public/embed/oven.html
+++ b/public/embed/oven.html
@@ -31,8 +31,8 @@
     /* Big full-screen canvas */
     canvas {
       display: block;
-      width: 100vw;
-      height: 100vh;
+      width: 95vw;
+      height: 85vh;
       background: var(--bg);
     }
 
@@ -101,7 +101,10 @@
 
   <div class="error" id="tvError"></div>
 
+  <div class="frame">
   <canvas id="tvCanvas"></canvas>
+</div>
+
 
   <script src="/embed/oven-embed.js"></script>
 </body>
