--- a/public/tv-quality.html
+++ b/public/tv-quality.html
@@ -32,7 +32,7 @@
       `/embed/oven?dept=quality&chart=shiftTotals&range=thisShift&title=Shift Totals — Current Shift`
     ];
 
-    const ROTATE_EVERY_MS = 5 * 1000;
+    const ROTATE_EVERY_MS = 7 * 1000; // Rotation Interval*Number of Screens should not exceed refresh rate of WebLauncher app.(60 seconds)
     const RETURN_COOLDOWN_MS = 15 * 1000;
     const FADE_MS = 1 * 1000; // transition speed
     // ------------------------
