--- a/public/tv-maintenance.html
+++ b/public/tv-maintenance.html
@@ -10,28 +10,46 @@
 </style>
 </head>
 <body>
-<iframe id="screen" src="/oven"></iframe>
+  <div id="wrap">
+    <iframe id="a" class="frame show" allow="autoplay" src="/embed/oven?dept=maintenance&chart=timeseries&range=lastHour"></iframe>
+    <iframe id="b" class="frame" allow="autoplay" src="about:blank"></iframe>
+  </div>
 
 <script src="/socket.io/socket.io.js"></script>
 <script>
   // --------- CONFIG (edit over time) ---------
   const DEPT = "maintenance";
-  const DASHBOARD_URL = `/dashboard/${DEPT}`;
+  const DASHBOARD_URL = `/dashboard/${DEPT}?tv=1&sound=1`;
 
   // Rotation list (add future maintenance pages here)
   const ROTATE_URLS = [
-    "/oven",
-    "/molds",
-    "/embed/oven?chart=timeseries&range=prevShift&title=Oven — Prev Shift"
+    `/embed/oven?dept=maintenance&chart=timeseries&range=lastHour&title=Oven Completions — Last Hour`,
+    `/embed/oven?dept=maintenance&chart=timeseries&range=prevWeek&title=Oven Completions — Last Week`,
+    `/embed/oven?dept=maintenance&chart=cureTimeseries&range=prevShift&title=Cure Time — Prev Shift`,
+    `/molds?tv=1&title=Mold Cleaning Status`,
     // Future: "/maintenance-metrics", "/pm-compliance", etc.
   ];
 
-  const ROTATE_EVERY_MS = 90 * 1000;     // 90 seconds per page
+  const ROTATE_EVERY_MS = 10 * 1000;     // 90 seconds per page
   const RETURN_COOLDOWN_MS = 15 * 1000;  // wait 15s after call clears
+  const FADE_MS = 1 * 1000; // transition speed
   // -------------------------------------------
 
-  const screen = document.getElementById("screen");
+  // Add fade styles
+  const style = document.createElement("style");
+  style.textContent = `
+    html,body{margin:0;height:100%;background:#000;overflow:hidden}
+    #wrap{position:fixed;inset:0;background:#000}
+    .frame{position:absolute;inset:0;border:0;width:100%;height:100%;opacity:0;transition:opacity ${FADE_MS}ms ease}
+    .frame.show{opacity:1}
+  `;
+  document.head.appendChild(style);
+
   const socket = io({ query: { dept: DEPT } });
+
+  const a = document.getElementById("a");
+  const b = document.getElementById("b");
+  let front = a, back = b;
 
   let rotateIndex = 0;
   let rotateTimer = null;
@@ -43,19 +61,33 @@
       : Array.isArray(snapshot?.cells) && snapshot.cells.some(c => c.status === "WAITING");
   }
 
-  function go(url) {
-    if (screen.getAttribute("src") !== url) screen.src = url;
+  function swapTo(url) {
+    // Load into back iframe, then crossfade when loaded
+    back.onload = () => {
+      back.classList.add("show");
+      front.classList.remove("show");
+
+      // swap refs
+      const tmp = front;
+      front = back;
+      back = tmp;
+
+      // stop repeated onload firing
+      back.onload = null;
+    };
+    back.src = url;
   }
 
   function startRotation() {
     stopRotation();
     if (!ROTATE_URLS.length) return;
-    go(ROTATE_URLS[rotateIndex % ROTATE_URLS.length]);
+
+    swapTo(ROTATE_URLS[rotateIndex % ROTATE_URLS.length]);
 
     rotateTimer = setInterval(() => {
       if (inAlertMode) return;
       rotateIndex = (rotateIndex + 1) % ROTATE_URLS.length;
-      go(ROTATE_URLS[rotateIndex]);
+      swapTo(ROTATE_URLS[rotateIndex]);
     }, ROTATE_EVERY_MS);
   }
 
@@ -69,7 +101,7 @@
     if (returnCooldownTimer) clearTimeout(returnCooldownTimer);
     returnCooldownTimer = null;
     stopRotation();
-    go(DASHBOARD_URL);
+    swapTo(DASHBOARD_URL);
   }
 
   function exitAlertMode() {
